plang/testing/logs/false-incorrect/78/program78.p.p.out
Error at t3Lo Yyj9t :- ((kZC)).:1:13 error: 
t3Lo Yyj9t :- ((kZC)).
            ^
Error at t3Lo Yyj9t :- ((kZC)).:1:19 error: 
t3Lo Yyj9t :- ((kZC)).
                  ^
Error at v5l H1oMd nq :- (z3yp (xZi cRY X AI (RMStT)) pS; d Q; i (Zmxc) DoBwL; anZ ujWH), ((l; oKeuC i2nsb); q Wk og; nE I nJ FsSJl; bP).:7:15 error: 
v5l H1oMd nq :- (z3yp (xZi cRY X AI (RMStT)) pS; d Q; i (Zmxc) DoBwL; anZ ujWH), ((l; oKeuC i2nsb); q Wk og; nE I nJ FsSJl; bP).
              ^
Error at v5l H1oMd nq :- (z3yp (xZi cRY X AI (RMStT)) pS; d Q; i (Zmxc) DoBwL; anZ ujWH), ((l; oKeuC i2nsb); q Wk og; nE I nJ FsSJl; bP).:7:47 error: 
v5l H1oMd nq :- (z3yp (xZi cRY X AI (RMStT)) pS; d Q; i (Zmxc) DoBwL; anZ ujWH), ((l; oKeuC i2nsb); q Wk og; nE I nJ FsSJl; bP).
                                              ^
Error at v5l H1oMd nq :- (z3yp (xZi cRY X AI (RMStT)) pS; d Q; i (Zmxc) DoBwL; anZ ujWH), ((l; oKeuC i2nsb); q Wk og; nE I nJ FsSJl; bP).:7:52 error: 
v5l H1oMd nq :- (z3yp (xZi cRY X AI (RMStT)) pS; d Q; i (Zmxc) DoBwL; anZ ujWH), ((l; oKeuC i2nsb); q Wk og; nE I nJ FsSJl; bP).
                                                   ^
Error at v5l H1oMd nq :- (z3yp (xZi cRY X AI (RMStT)) pS; d Q; i (Zmxc) DoBwL; anZ ujWH), ((l; oKeuC i2nsb); q Wk og; nE I nJ FsSJl; bP).:7:68 error: 
v5l H1oMd nq :- (z3yp (xZi cRY X AI (RMStT)) pS; d Q; i (Zmxc) DoBwL; anZ ujWH), ((l; oKeuC i2nsb); q Wk og; nE I nJ FsSJl; bP).
                                                                   ^
Error at v5l H1oMd nq :- (z3yp (xZi cRY X AI (RMStT)) pS; d Q; i (Zmxc) DoBwL; anZ ujWH), ((l; oKeuC i2nsb); q Wk og; nE I nJ FsSJl; bP).:7:78 error: 
v5l H1oMd nq :- (z3yp (xZi cRY X AI (RMStT)) pS; d Q; i (Zmxc) DoBwL; anZ ujWH), ((l; oKeuC i2nsb); q Wk og; nE I nJ FsSJl; bP).
                                                                             ^
Error at v5l H1oMd nq :- (z3yp (xZi cRY X AI (RMStT)) pS; d Q; i (Zmxc) DoBwL; anZ ujWH), ((l; oKeuC i2nsb); q Wk og; nE I nJ FsSJl; bP).:7:84 error: 
v5l H1oMd nq :- (z3yp (xZi cRY X AI (RMStT)) pS; d Q; i (Zmxc) DoBwL; anZ ujWH), ((l; oKeuC i2nsb); q Wk og; nE I nJ FsSJl; bP).
                                                                                   ^
Error at v5l H1oMd nq :- (z3yp (xZi cRY X AI (RMStT)) pS; d Q; i (Zmxc) DoBwL; anZ ujWH), ((l; oKeuC i2nsb); q Wk og; nE I nJ FsSJl; bP).:7:97 error: 
v5l H1oMd nq :- (z3yp (xZi cRY X AI (RMStT)) pS; d Q; i (Zmxc) DoBwL; anZ ujWH), ((l; oKeuC i2nsb); q Wk og; nE I nJ FsSJl; bP).
                                                                                                ^
Error at v5l H1oMd nq :- (z3yp (xZi cRY X AI (RMStT)) pS; d Q; i (Zmxc) DoBwL; anZ ujWH), ((l; oKeuC i2nsb); q Wk og; nE I nJ FsSJl; bP).:7:107 error: 
v5l H1oMd nq :- (z3yp (xZi cRY X AI (RMStT)) pS; d Q; i (Zmxc) DoBwL; anZ ujWH), ((l; oKeuC i2nsb); q Wk og; nE I nJ FsSJl; bP).
                                                                                                          ^
Error at v5l H1oMd nq :- (z3yp (xZi cRY X AI (RMStT)) pS; d Q; i (Zmxc) DoBwL; anZ ujWH), ((l; oKeuC i2nsb); q Wk og; nE I nJ FsSJl; bP).:7:122 error: 
v5l H1oMd nq :- (z3yp (xZi cRY X AI (RMStT)) pS; d Q; i (Zmxc) DoBwL; anZ ujWH), ((l; oKeuC i2nsb); q Wk og; nE I nJ FsSJl; bP).
                                                                                                                         ^
Error at v5l H1oMd nq :- (z3yp (xZi cRY X AI (RMStT)) pS; d Q; i (Zmxc) DoBwL; anZ ujWH), ((l; oKeuC i2nsb); q Wk og; nE I nJ FsSJl; bP).:7:126 error: 
v5l H1oMd nq :- (z3yp (xZi cRY X AI (RMStT)) pS; d Q; i (Zmxc) DoBwL; anZ ujWH), ((l; oKeuC i2nsb); q Wk og; nE I nJ FsSJl; bP).
                                                                                                                             ^
Error at myL4 (f J12U) n (Y) (aE1) :- (((vp5N (HX) qSi)), aknMN (bmhm (Tyi) (N1)) (xSis ccp Aa09 om) (tCafF (gS (IU1w)) (nI))), (hy (Bz); (uQ kuDUu Es kkLl VFB)); (wQ0Bg), tz (UQ) VWv (YG83) (LfLk2); jsJ dgSB (j1ve (ZTIFR) (mmBK oZTe p7SL (QKKJ)) (g3qX (e0OT) c V7 (WtKZ8)) (g RHeN (sDQ))) buk; mjav (lhgp (YrbE) O8YrV QqVAU (KQBm)) Nf, xe5Di j qY3 (RTf9) VI.:10:28 error: 
myL4 (f J12U) n (Y) (aE1) :- (((vp5N (HX) qSi)), aknMN (bmhm (Tyi) (N1)) (xSis ccp Aa09 om) (tCafF (gS (IU1w)) (nI))), (hy (Bz); (uQ kuDUu Es kkLl VFB)); (wQ0Bg), tz (UQ) VWv (YG83) (LfLk2); jsJ dgSB (j1ve (ZTIFR) (mmBK oZTe p7SL (QKKJ)) (g3qX (e0OT) c V7 (WtKZ8)) (g RHeN (sDQ))) buk; mjav (lhgp (YrbE) O8YrV QqVAU (KQBm)) Nf, xe5Di j qY3 (RTf9) VI.
                           ^
Error at myL4 (f J12U) n (Y) (aE1) :- (((vp5N (HX) qSi)), aknMN (bmhm (Tyi) (N1)) (xSis ccp Aa09 om) (tCafF (gS (IU1w)) (nI))), (hy (Bz); (uQ kuDUu Es kkLl VFB)); (wQ0Bg), tz (UQ) VWv (YG83) (LfLk2); jsJ dgSB (j1ve (ZTIFR) (mmBK oZTe p7SL (QKKJ)) (g3qX (e0OT) c V7 (WtKZ8)) (g RHeN (sDQ))) buk; mjav (lhgp (YrbE) O8YrV QqVAU (KQBm)) Nf, xe5Di j qY3 (RTf9) VI.:10:45 error: 
myL4 (f J12U) n (Y) (aE1) :- (((vp5N (HX) qSi)), aknMN (bmhm (Tyi) (N1)) (xSis ccp Aa09 om) (tCafF (gS (IU1w)) (nI))), (hy (Bz); (uQ kuDUu Es kkLl VFB)); (wQ0Bg), tz (UQ) VWv (YG83) (LfLk2); jsJ dgSB (j1ve (ZTIFR) (mmBK oZTe p7SL (QKKJ)) (g3qX (e0OT) c V7 (WtKZ8)) (g RHeN (sDQ))) buk; mjav (lhgp (YrbE) O8YrV QqVAU (KQBm)) Nf, xe5Di j qY3 (RTf9) VI.
                                            ^
Error at myL4 (f J12U) n (Y) (aE1) :- (((vp5N (HX) qSi)), aknMN (bmhm (Tyi) (N1)) (xSis ccp Aa09 om) (tCafF (gS (IU1w)) (nI))), (hy (Bz); (uQ kuDUu Es kkLl VFB)); (wQ0Bg), tz (UQ) VWv (YG83) (LfLk2); jsJ dgSB (j1ve (ZTIFR) (mmBK oZTe p7SL (QKKJ)) (g3qX (e0OT) c V7 (WtKZ8)) (g RHeN (sDQ))) buk; mjav (lhgp (YrbE) O8YrV QqVAU (KQBm)) Nf, xe5Di j qY3 (RTf9) VI.:10:116 error: 
myL4 (f J12U) n (Y) (aE1) :- (((vp5N (HX) qSi)), aknMN (bmhm (Tyi) (N1)) (xSis ccp Aa09 om) (tCafF (gS (IU1w)) (nI))), (hy (Bz); (uQ kuDUu Es kkLl VFB)); (wQ0Bg), tz (UQ) VWv (YG83) (LfLk2); jsJ dgSB (j1ve (ZTIFR) (mmBK oZTe p7SL (QKKJ)) (g3qX (e0OT) c V7 (WtKZ8)) (g RHeN (sDQ))) buk; mjav (lhgp (YrbE) O8YrV QqVAU (KQBm)) Nf, xe5Di j qY3 (RTf9) VI.
                                                                                                                   ^
Error at myL4 (f J12U) n (Y) (aE1) :- (((vp5N (HX) qSi)), aknMN (bmhm (Tyi) (N1)) (xSis ccp Aa09 om) (tCafF (gS (IU1w)) (nI))), (hy (Bz); (uQ kuDUu Es kkLl VFB)); (wQ0Bg), tz (UQ) VWv (YG83) (LfLk2); jsJ dgSB (j1ve (ZTIFR) (mmBK oZTe p7SL (QKKJ)) (g3qX (e0OT) c V7 (WtKZ8)) (g RHeN (sDQ))) buk; mjav (lhgp (YrbE) O8YrV QqVAU (KQBm)) Nf, xe5Di j qY3 (RTf9) VI.:10:127 error: 
myL4 (f J12U) n (Y) (aE1) :- (((vp5N (HX) qSi)), aknMN (bmhm (Tyi) (N1)) (xSis ccp Aa09 om) (tCafF (gS (IU1w)) (nI))), (hy (Bz); (uQ kuDUu Es kkLl VFB)); (wQ0Bg), tz (UQ) VWv (YG83) (LfLk2); jsJ dgSB (j1ve (ZTIFR) (mmBK oZTe p7SL (QKKJ)) (g3qX (e0OT) c V7 (WtKZ8)) (g RHeN (sDQ))) buk; mjav (lhgp (YrbE) O8YrV QqVAU (KQBm)) Nf, xe5Di j qY3 (RTf9) VI.
                                                                                                                              ^
Error at myL4 (f J12U) n (Y) (aE1) :- (((vp5N (HX) qSi)), aknMN (bmhm (Tyi) (N1)) (xSis ccp Aa09 om) (tCafF (gS (IU1w)) (nI))), (hy (Bz); (uQ kuDUu Es kkLl VFB)); (wQ0Bg), tz (UQ) VWv (YG83) (LfLk2); jsJ dgSB (j1ve (ZTIFR) (mmBK oZTe p7SL (QKKJ)) (g3qX (e0OT) c V7 (WtKZ8)) (g RHeN (sDQ))) buk; mjav (lhgp (YrbE) O8YrV QqVAU (KQBm)) Nf, xe5Di j qY3 (RTf9) VI.:10:150 error: 
myL4 (f J12U) n (Y) (aE1) :- (((vp5N (HX) qSi)), aknMN (bmhm (Tyi) (N1)) (xSis ccp Aa09 om) (tCafF (gS (IU1w)) (nI))), (hy (Bz); (uQ kuDUu Es kkLl VFB)); (wQ0Bg), tz (UQ) VWv (YG83) (LfLk2); jsJ dgSB (j1ve (ZTIFR) (mmBK oZTe p7SL (QKKJ)) (g3qX (e0OT) c V7 (WtKZ8)) (g RHeN (sDQ))) buk; mjav (lhgp (YrbE) O8YrV QqVAU (KQBm)) Nf, xe5Di j qY3 (RTf9) VI.
                                                                                                                                                     ^
Error at myL4 (f J12U) n (Y) (aE1) :- (((vp5N (HX) qSi)), aknMN (bmhm (Tyi) (N1)) (xSis ccp Aa09 om) (tCafF (gS (IU1w)) (nI))), (hy (Bz); (uQ kuDUu Es kkLl VFB)); (wQ0Bg), tz (UQ) VWv (YG83) (LfLk2); jsJ dgSB (j1ve (ZTIFR) (mmBK oZTe p7SL (QKKJ)) (g3qX (e0OT) c V7 (WtKZ8)) (g RHeN (sDQ))) buk; mjav (lhgp (YrbE) O8YrV QqVAU (KQBm)) Nf, xe5Di j qY3 (RTf9) VI.:10:160 error: 
myL4 (f J12U) n (Y) (aE1) :- (((vp5N (HX) qSi)), aknMN (bmhm (Tyi) (N1)) (xSis ccp Aa09 om) (tCafF (gS (IU1w)) (nI))), (hy (Bz); (uQ kuDUu Es kkLl VFB)); (wQ0Bg), tz (UQ) VWv (YG83) (LfLk2); jsJ dgSB (j1ve (ZTIFR) (mmBK oZTe p7SL (QKKJ)) (g3qX (e0OT) c V7 (WtKZ8)) (g RHeN (sDQ))) buk; mjav (lhgp (YrbE) O8YrV QqVAU (KQBm)) Nf, xe5Di j qY3 (RTf9) VI.
                                                                                                                                                               ^
Error at myL4 (f J12U) n (Y) (aE1) :- (((vp5N (HX) qSi)), aknMN (bmhm (Tyi) (N1)) (xSis ccp Aa09 om) (tCafF (gS (IU1w)) (nI))), (hy (Bz); (uQ kuDUu Es kkLl VFB)); (wQ0Bg), tz (UQ) VWv (YG83) (LfLk2); jsJ dgSB (j1ve (ZTIFR) (mmBK oZTe p7SL (QKKJ)) (g3qX (e0OT) c V7 (WtKZ8)) (g RHeN (sDQ))) buk; mjav (lhgp (YrbE) O8YrV QqVAU (KQBm)) Nf, xe5Di j qY3 (RTf9) VI.:10:189 error: 
myL4 (f J12U) n (Y) (aE1) :- (((vp5N (HX) qSi)), aknMN (bmhm (Tyi) (N1)) (xSis ccp Aa09 om) (tCafF (gS (IU1w)) (nI))), (hy (Bz); (uQ kuDUu Es kkLl VFB)); (wQ0Bg), tz (UQ) VWv (YG83) (LfLk2); jsJ dgSB (j1ve (ZTIFR) (mmBK oZTe p7SL (QKKJ)) (g3qX (e0OT) c V7 (WtKZ8)) (g RHeN (sDQ))) buk; mjav (lhgp (YrbE) O8YrV QqVAU (KQBm)) Nf, xe5Di j qY3 (RTf9) VI.
                                                                                                                                                                                            ^
Error at myL4 (f J12U) n (Y) (aE1) :- (((vp5N (HX) qSi)), aknMN (bmhm (Tyi) (N1)) (xSis ccp Aa09 om) (tCafF (gS (IU1w)) (nI))), (hy (Bz); (uQ kuDUu Es kkLl VFB)); (wQ0Bg), tz (UQ) VWv (YG83) (LfLk2); jsJ dgSB (j1ve (ZTIFR) (mmBK oZTe p7SL (QKKJ)) (g3qX (e0OT) c V7 (WtKZ8)) (g RHeN (sDQ))) buk; mjav (lhgp (YrbE) O8YrV QqVAU (KQBm)) Nf, xe5Di j qY3 (RTf9) VI.:10:284 error: 
myL4 (f J12U) n (Y) (aE1) :- (((vp5N (HX) qSi)), aknMN (bmhm (Tyi) (N1)) (xSis ccp Aa09 om) (tCafF (gS (IU1w)) (nI))), (hy (Bz); (uQ kuDUu Es kkLl VFB)); (wQ0Bg), tz (UQ) VWv (YG83) (LfLk2); jsJ dgSB (j1ve (ZTIFR) (mmBK oZTe p7SL (QKKJ)) (g3qX (e0OT) c V7 (WtKZ8)) (g RHeN (sDQ))) buk; mjav (lhgp (YrbE) O8YrV QqVAU (KQBm)) Nf, xe5Di j qY3 (RTf9) VI.
                                                                                                                                                                                                                                                                                           ^
Error at myL4 (f J12U) n (Y) (aE1) :- (((vp5N (HX) qSi)), aknMN (bmhm (Tyi) (N1)) (xSis ccp Aa09 om) (tCafF (gS (IU1w)) (nI))), (hy (Bz); (uQ kuDUu Es kkLl VFB)); (wQ0Bg), tz (UQ) VWv (YG83) (LfLk2); jsJ dgSB (j1ve (ZTIFR) (mmBK oZTe p7SL (QKKJ)) (g3qX (e0OT) c V7 (WtKZ8)) (g RHeN (sDQ))) buk; mjav (lhgp (YrbE) O8YrV QqVAU (KQBm)) Nf, xe5Di j qY3 (RTf9) VI.:10:326 error: 
myL4 (f J12U) n (Y) (aE1) :- (((vp5N (HX) qSi)), aknMN (bmhm (Tyi) (N1)) (xSis ccp Aa09 om) (tCafF (gS (IU1w)) (nI))), (hy (Bz); (uQ kuDUu Es kkLl VFB)); (wQ0Bg), tz (UQ) VWv (YG83) (LfLk2); jsJ dgSB (j1ve (ZTIFR) (mmBK oZTe p7SL (QKKJ)) (g3qX (e0OT) c V7 (WtKZ8)) (g RHeN (sDQ))) buk; mjav (lhgp (YrbE) O8YrV QqVAU (KQBm)) Nf, xe5Di j qY3 (RTf9) VI.
                                                                                                                                                                                                                                                                                                                                     ^