plang/testing/logs/false-incorrect/78/program78.p.p
t3Lo Yyj9t :- ((kZC)).

gZ (ggz (Xj) aoW).
p3 tEb8 :- pxi.


v5l H1oMd nq :- (z3yp (xZi cRY X AI (RMStT)) pS; d Q; i (Zmxc) DoBwL; anZ ujWH), ((l; oKeuC i2nsb); q Wk og; nE I nJ FsSJl; bP).


myL4 (f J12U) n (Y) (aE1) :- (((vp5N (HX) qSi)), aknMN (bmhm (Tyi) (N1)) (xSis ccp Aa09 om) (tCafF (gS (IU1w)) (nI))), (hy (Bz); (uQ kuDUu Es kkLl VFB)); (wQ0Bg), tz (UQ) VWv (YG83) (LfLk2); jsJ dgSB (j1ve (ZTIFR) (mmBK oZTe p7SL (QKKJ)) (g3qX (e0OT) c V7 (WtKZ8)) (g RHeN (sDQ))) buk; mjav (lhgp (YrbE) O8YrV QqVAU (KQBm)) Nf, xe5Di j qY3 (RTf9) VI.

h (aQ uLbe) y.

f0e xtGGU (PM) AXXDI (Zg).

fvIRQ hC4 (lTA7 e1) e qIm.
i YPwcY A (o (YIy) (WR) SR) (o8alP E zLS RPxyD) :- ziSx2 S (H).
oQLf.


m (w4N I (diZht)) WaD AmRKM.


vd4mJ p1Osa (dcVn (KWA5Q) (rVYo (Qr) oU8C nj66) (jfeWI sx)) (vs Hicl (wFjQL) (Qa)) (Fk) :- jGml (x1yi cR1aP).

bG (f IffX D) (AlTP) (o (J8R) (Tlfp) Ded) d :- dcxDX (AD) (s48dW T (HvyzP) (lNyI tR) (TVcy)).

iJotU lM (nx (kYl uhJZ (hc) G) AxFe s0f).
mDV :- b (pc9 (LZPu) WYq) (IkE) (qqw1N pL1SK x7) (zgX4l), (vjRr, sqU (qwSmg (PB3V)) (i2e AqP (uVn (PgMNn)))), (bcRqq); o XViVU (x (e0 W SjYc) (b)) t2T, dU; (u1eS f).
qbd (vk DZIe xS6GD) F v2 :- silHZ XaI z9i QI pghvq, w1RUp Or e.
qKfK i5 (NCmA) q4JD :- eWCeb vMxW j pWvtB MYM.


kc4.


? qV4 U, (d (lp pTl xl (R))); mr3CD (Ld).


